# dockerfiles

./: LICENSE  README.md
.github/: dependabot.yml
echo-server/: Dockerfile  Makefile  echo_server.py  pyproject.toml
ml-env/: Dockerfile  Makefile  README.md  pyproject.toml
ml-env/examples/: sklearn.ipynb  train.py
ml-env/ml_env/: __init__.py
poetry-notebook/: Dockerfile  Makefile
poetry-notebook/extras/: shortcuts.jupyterlab-settings
