[tool.poetry]
name = "echo-server"
version = "0.1.0"
description = ""
authors = ["Rafal Skolasinski <r.j.skolasinski@gmail.com>"]
license = "MIT"


[tool.poetry.scripts]
echo-server = "echo_server:echo_server"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
Flask = "^2.0.1"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.2"
pyflakes = "^2.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
