[tool.poetry]
name = "ml-env"
version = "0.1.0"
description = ""
authors = ["Rafal Skolasinski <r.j.skolasinski@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.5"
adaptive = "^0.11.1"

scikit-learn = "^0.23.2"
scikit-image = "^0.17.2"
tensorflow = "^2.3.0"

matplotlib = "^3.3.2"
plotly = "^4.12.0"

requests = "^2.24.0"
seaborn = "^0.11.0"

deepdish = "^0.3.6"
pandas = "^1.1.4"
xarray = "^0.16.1"
xyzpy = "^1.0.0"

h5py = "^2.10.0"
SQLAlchemy = "^1.3.20"

numba = "^0.51.2"
numexpr = "^2.7.1"


[tool.poetry.dev-dependencies]
jupyterlab = "^2.2.8"
ipywidgets = "^7.5.1"
nbdime = "^2.0.0"

black = "^20.8b1"
pytest = "^6.0.2"
pyflakes = "^2.2.0"

pytest-cov = "^2.10.1"
pytest-flakes = "^4.0.2"
line-profiler = "^3.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
